--- a/src/styles/designlab.css
+++ b/src/styles/designlab.css
@@ -1,14 +1,17 @@
-#textBox {
+.textBox {
   position: fixed;
-  bottom: 0px;
-  left: 50px;
-  /* translate: -35% -50%; */
+  bottom: 10px;
+  left: -64%;
   padding: 30px;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 20px;
   width: 100%;
   max-width: 700px;
+  transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+}
+.textBox.active {
+  left: 50px;
 }
 #box-cols {
   display: flex;
@@ -41,8 +44,15 @@ textarea {
   padding: 10px;
   margin-top: 20px;
   text-align: center;
+  background-color: rgb(238, 205, 205);
+  border-radius: 5px;
 }
 #error {
   color: rgb(102, 34, 34);
   font-weight: 500;
+}
+
+#bx-cl-left i {
+  font-size: 1.4rem;
+  cursor: pointer;
 }
