--- a/src/styles/signup.module.css
+++ b/src/styles/signup.module.css
@@ -5,6 +5,7 @@
   min-height: 100vh;
 }
 #form_container {
+  width: 420px;
   padding: 30px;
   background-color: #fff;
   border-radius: 8px;
@@ -185,6 +186,7 @@
   left: 0;
   width: 0%;
   height: 100%;
+  white-space: nowrap;
   background-color: transparent;
   border-radius: 5px;
   transition: 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
