--- a/src/App.css
+++ b/src/App.css
@@ -254,7 +254,8 @@
   margin-left: 65px;
 }
 #pst_content span {
-  font-size: 14px;
+  font-size: 20px;
+  font-weight: 500;
   text-align: justify;
 }
 #includeImg {
