🎨 Working on style for responsive view

--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,15 @@
 }
 .col-1 {
   width: 100%;
-  max-width: 400px;
+  max-width: 300px;
   position: -webkit-sticky;
   position: sticky;
+  /* background-color: red; */
   top: 0;
   height: 100%;
 }
 .col-1 .col-1-tabs .col-1-tab-em .tab-em {
-  width: 300px;
+  width: 180px;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
@@ -42,7 +43,7 @@
   margin-left: 15px;
 }
 .col-1-tab-send-button button {
-  width: 300px;
+  width: 180px;
   padding: 14px;
   border-radius: 8px;
   outline: none;
@@ -192,6 +193,9 @@
   font-weight: 500;
 }
 .post_box {
+  width: 100%;
+}
+.post_box .post_box_wrapper .wrapper_item {
   width: 100%;
   background-color: #fff;
   padding: 20px;
