--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,20 @@
 body {
   background: var(--light);
 }
+*::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 5px;
+  background-color: #dad0ea;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #6f38c5;
+  border-radius: 10px;
+}
+*::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(179, 141, 232);
+  border-radius: 10px;
+}
+*::-webkit-scrollbar-thumb:focus {
+  background-color: rgb(179, 141, 232);
+  border-radius: 10px;
+}
