--- a/src/styles/trendsUI.module.css
+++ b/src/styles/trendsUI.module.css
@@ -3,6 +3,8 @@
 }
 #header {
   width: 100%;
+  position: fixed;
+  top: 0;
   background-color: #fff;
   padding: 0 25px;
   box-shadow: -10px 6px 30px -8px rgba(0, 0, 0, 0.1);
@@ -63,8 +65,8 @@
 #body_ {
   width: 100%;
   padding: 25px;
+  margin: 90px 0 0 0;
   background-color: #fff;
-  margin: 10px 0 0 0;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
