--- a/src/styles/trendsUI.module.css
+++ b/src/styles/trendsUI.module.css
@@ -3,6 +3,9 @@
 }
 #header {
   width: 100%;
+  position: fixed;
+  z-index: 20;
+  top: 0;
   background-color: #fff;
   padding: 0 25px;
   box-shadow: -10px 6px 30px -8px rgba(0, 0, 0, 0.1);
@@ -37,12 +40,7 @@
 #spotlight {
   padding: 5px 10px;
   border-radius: 5px;
-  background: rgb(36, 87, 149);
-  background: linear-gradient(
-    85deg,
-    rgba(36, 87, 149, 1) 0%,
-    rgba(75, 15, 171, 0.5889706224286589) 100%
-  );
+  background-color: #182535;
   color: #fff;
   text-align: center;
   position: absolute;
@@ -63,8 +61,8 @@
 #body_ {
   width: 100%;
   padding: 25px;
+  margin: 90px 0 0 0;
   background-color: #fff;
-  margin: 10px 0 0 0;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
