--- a/src/styles/trendsUI.module.css
+++ b/src/styles/trendsUI.module.css
@@ -1,71 +1,11 @@
 .trendBody {
   width: 100%;
 }
-#header {
-  width: 100%;
-  position: fixed;
-  z-index: 20;
-  top: 0;
-  background-color: #fff;
-  padding: 0 25px;
-  box-shadow: -10px 6px 30px -8px rgba(0, 0, 0, 0.1);
-  border-radius: 0 0 10px 10px;
-}
-#header_cols {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-#header_cols_right {
-  display: flex;
-  align-items: center;
-}
-#links {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  position: relative;
-}
 
-#links a {
-  margin-right: 60px;
-  font-size: 2rem;
-  color: #182535;
-}
-#links:hover > #spotlight {
-  top: 50px;
-  pointer-events: auto;
-  opacity: 1;
-}
-#spotlight {
-  padding: 5px 10px;
-  border-radius: 5px;
-  background-color: #182535;
-  color: #fff;
-  text-align: center;
-  position: absolute;
-  top: 100px;
-  pointer-events: none;
-  opacity: 0;
-  right: 0;
-  cursor: pointer;
-  margin-right: 40px;
-  transition: 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-}
-#spotlight:hover {
-  top: 50px;
-  pointer-events: auto;
-  opacity: 1;
-}
 /* The body of the Trends Page */
 #body_ {
   width: 100%;
   padding: 25px;
-  margin: 90px 0 0 0;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 #body_ #top_text h3 {
   font-size: 1.4em;
@@ -76,7 +16,7 @@
   border-radius: 8px;
   outline: none;
   border: none;
-  background-color: #e4e4e4;
+  background-color: #fff;
   font-weight: 600;
   font-size: 1em;
   display: flex;
@@ -111,11 +51,12 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
 }
 #trend_box {
   width: 500px;
   padding: 20px;
+  background-color: #fff;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   margin: 10px 0 10px 10px;
   border-radius: 10px;
