--- a/src/styles/designlab.css
+++ b/src/styles/designlab.css
@@ -1,17 +1,45 @@
 .textBox {
   position: fixed;
   bottom: 10px;
-  left: -100%;
+  left: 50px;
   padding: 30px;
   background-color: #fff;
   border-radius: 10px;
+  z-index: 40;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 20px;
   width: 100%;
   max-width: 700px;
-  transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 .textBox.active {
-  left: 50px;
+  opacity: 1;
+  pointer-events: auto;
+  animation: jello-horizontal 0.9s linear both;
+}
+@keyframes jello-horizontal {
+  0% {
+    transform: scale3d(1, 1, 1);
+  }
+  30% {
+    transform: scale3d(1.25, 0.75, 1);
+  }
+  40% {
+    transform: scale3d(0.75, 1.25, 1);
+  }
+  50% {
+    transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    transform: scale3d(0.95, 1.05, 1);
+  }
+  75% {
+    transform: scale3d(1.05, 0.95, 1);
+  }
+  100% {
+    transform: scale3d(1, 1, 1);
+  }
 }
 #box-cols {
   display: flex;
