--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -12,7 +12,6 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 #header {
-  text-align: center;
   font-size: 2rem;
   font-weight: 600;
 }
@@ -26,11 +25,14 @@
 #inputbox input {
   width: 100%;
   padding: 10px 15px;
-  border: 1.4px solid #d7d7d7;
+  border: 2px solid #d7d7d7;
   outline: none;
   border-radius: 3px;
 }
-#inputbox:nth-child(2) {
+#inputbox input:focus {
+  border-color: #206CCE;
+}
+#inputbox {
   margin-top: 10px;
 }
 #inputbox i {
@@ -48,68 +50,9 @@
 }
 #fgtpassword a {
   text-decoration: none;
-  color: #6f38c5;
-}
-#tickbox {
-  margin-top: 9px;
-}
-#checkbox #check_text {
-  color: rgb(56, 59, 59);
-  user-select: none;
-}
-#checkbox {
-  display: flex;
-  align-items: center;
-}
-#checkbox label #label {
-  width: 20px;
-  height: 20px;
-  /* background-color: red; */
-  border: 2px solid #d7d7d7;
-  border-radius: 2px;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-#checkbox label #label::before {
-  content: "";
-  position: absolute;
-  left: 4px;
-  top: 6px;
-  background-color: #fff;
-  width: 2px;
-  height: 50%;
-  z-index: 99;
-  rotate: -28deg;
-  scale: 0;
-  transition: 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-}
-#checkbox label #label::after {
-  content: "";
-  position: absolute;
-  left: 9px;
-  top: 4px;
-  background-color: #fff;
-  width: 2px;
-  height: 70%;
-  rotate: 40deg;
-  scale: 0;
-  transition: 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-}
-#check_text {
-  margin-left: 5px;
-  font-size: 15px;
+  color: #206CCE;
 }
 
-#checkbox input[type="checkbox"]:checked ~ label #label::before {
-  background-color: #6f38c5;
-  scale: 1;
-}
-#checkbox input[type="checkbox"]:checked ~ label #label::after {
-  background-color: #6f38c5;
-  scale: 1;
-}
 #signoption {
   display: flex;
   align-items: center;
@@ -128,7 +71,7 @@
   top: 10px;
   right: 100px;
   display: block;
-  width: 140px;
+  width: 100%;
   height: 1px;
   background-color: rgb(167, 167, 167);
 }
@@ -138,18 +81,18 @@
   top: 10px;
   left: 100px;
   display: block;
-  width: 140px;
+  width: 100%;
   height: 1px;
   background-color: rgb(167, 167, 167);
 }
-#options i {
-  font-size: 1.8rem;
-  color: rgb(167, 167, 167);
+#options img {
+  width: 30px;
+  margin-top: 10px;
 }
-#options i:hover {
+#options img:hover {
   cursor: pointer;
 }
-#options i:nth-child(2) {
+#options img:nth-child(2) {
   margin-left: 5px;
 }
 #reqbtn {
@@ -161,7 +104,7 @@
   outline: none;
   border: none;
   border-radius: 5px;
-  background-color: #6f38c5;
+  background-color: #206CCE;
   font-weight: 500;
   color: #fefefe;
   font-size: 1.2rem;
@@ -181,16 +124,17 @@
   top: 0;
   left: 0;
   width: 0%;
-  height: 100%;
+  height: 0%;
   white-space: nowrap;
   background-color: transparent;
   border-radius: 5px;
   transition: 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 #reqbtn button:hover::before {
-  content: "Log In >";
+  content: "Log In";
   width: 100%;
-  background-color: #5b4284;
+  height: 100%;
+  background-color: #1674EA;
 }
 #reqbtn {
   margin-top: 15px;
@@ -202,7 +146,7 @@
 #reqbtn a {
   margin-left: 5px;
   text-decoration: none;
-  color: #5b4284;
+  color: #206CCE;
 }
 #form_error {
   font-size: 14px;
