--- a/src/index.css
+++ b/src/index.css
@@ -16,17 +16,17 @@ body {
 *::-webkit-scrollbar {
   width: 10px;
   border-radius: 5px;
-  background-color: #dad0ea;
+  background-color: rgba(14, 110, 253, 0.484);
 }
 *::-webkit-scrollbar-thumb {
-  background-color: #6f38c5;
+  background-color: rgb(14, 109, 253);
   border-radius: 10px;
 }
 *::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(179, 141, 232);
+  background-color: rgba(14, 110, 253, 0.484);
   border-radius: 10px;
 }
-*::-webkit-scrollbar-thumb:focus {
-  background-color: rgb(179, 141, 232);
+*::-webkit-scrollbar-thumb:active {
+  background-color: rgba(14, 110, 253, 0.275);
   border-radius: 10px;
 }
