--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -16,7 +16,7 @@
   font-weight: 600;
 }
 #cms {
-  margin-top: 25px;
+  margin-top: 35px;
 }
 #inputbox {
   width: 100%;
@@ -32,8 +32,8 @@
 #inputbox input:focus {
   border-color: #206CCE;
 }
-#inputbox {
-  margin-top: 10px;
+#inputbox:nth-child(2) {
+  margin-top: 25px;
 }
 #inputbox i {
   position: absolute;
@@ -54,46 +54,36 @@
 }
 
 #signoption {
+  margin-top: 20px;
+}
+#options {
+  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  padding: 8px 25px;
+  border-radius: 5px;
+}
+#options:nth-child(1) {
+  background-color: #0165E1;
+}
+#options:nth-child(2) {
   margin-top: 10px;
+  background-color: #DB4437;
 }
-#signoption span {
-  color: rgb(113, 113, 113);
-  position: relative;
-  font-size: 15px;
-}
-#signoption span::before {
-  content: "";
-  position: absolute;
-  top: 10px;
-  right: 100px;
-  display: block;
-  width: 100%;
-  height: 1px;
-  background-color: rgb(167, 167, 167);
-}
-#signoption span::after {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: 100px;
-  display: block;
-  width: 100%;
-  height: 1px;
-  background-color: rgb(167, 167, 167);
+#options:hover {
+  cursor: pointer;
 }
 #options img {
   width: 30px;
-  margin-top: 10px;
+  filter: invert(1);
 }
 #options img:hover {
   cursor: pointer;
 }
-#options img:nth-child(2) {
-  margin-left: 5px;
+#options p {
+  margin-left: 55px;
+  font-weight: 500;
+  color: #fff;
 }
 #reqbtn {
   margin-top: 8px;
