--- a/src/styles/signup.module.css
+++ b/src/styles/signup.module.css
@@ -52,49 +52,6 @@
   text-decoration: none;
   color: #206CCE;
 }
-
-#signoption {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin-top: 10px;
-}
-#signoption span {
-  color: rgb(113, 113, 113);
-  position: relative;
-  font-size: 15px;
-}
-#signoption span::before {
-  content: "";
-  position: absolute;
-  top: 10px;
-  right: 100px;
-  display: block;
-  width: 100%;
-  height: 1px;
-  background-color: rgb(167, 167, 167);
-}
-#signoption span::after {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: 100px;
-  display: block;
-  width: 100%;
-  height: 1px;
-  background-color: rgb(167, 167, 167);
-}
-#options img {
-  width: 30px;
-  margin-top: 10px;
-}
-#options img:hover {
-  cursor: pointer;
-}
-#options img:nth-child(2) {
-  margin-left: 5px;
-}
 #reqbtn {
   margin-top: 8px;
 }
@@ -131,7 +88,7 @@
   transition: 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 #reqbtn button:hover::before {
-  content: "Sign Up";
+  content: "Register";
   width: 100%;
   height: 100%;
   background-color: #1674EA;
